apps/webrtc-diagnostics/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: diagnostic
    app.kubernetes.io/instance: webrtc-diagnostics
    app.kubernetes.io/name: webrtc-diagnostics
  name: webrtc-diagnostics
  namespace: webrtc-diagnostics
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: diagnostic
      app.kubernetes.io/instance: webrtc-diagnostics
      app.kubernetes.io/name: webrtc-diagnostics
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: diagnostic
        app.kubernetes.io/instance: webrtc-diagnostics
        app.kubernetes.io/name: webrtc-diagnostics
    spec:
      automountServiceAccountToken: false
      containers:
        - name: app
          image: debian:bookworm-slim
          command:
            - /app/webrtc-diagnostics
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 50000
              name: ice-udp-min
              protocol: UDP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 2
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /app
              name: app
              readOnly: true
            - mountPath: /tmp
              name: tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 10
      volumes:
        - emptyDir: {}
          name: app
        - configMap:
            name: webrtc-diagnostics-app
          name: source
        - emptyDir: {}
          name: tmp
