apps/webrtc-diagnostics/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: webrtc-diagnostics
    app.kubernetes.io/name: webrtc-diagnostics
    app.kubernetes.io/service: webrtc-diagnostics
  name: webrtc-diagnostics
  namespace: webrtc-diagnostics
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: diagnostic
    app.kubernetes.io/instance: webrtc-diagnostics
    app.kubernetes.io/name: webrtc-diagnostics
  type: ClusterIP
